examples/test/testpolicy15422.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15422
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key29: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value13
      podSelector:
        matchLabels:
          key34: value3
          key32: value21
          key5: value21
